<resources>
    <string name="app_name" translatable="false">Facebed</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="email">Email</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_not_valid">At leat 8 characters including: 1 letter, 1 digit, 1 special character (._@$!#%^&amp;+=)</string>
    <string name="email_used">Email already registered</string>
    <string name="email_verification">Check your email and verify your account</string>
    <string name="already_verified">I have verified my account</string>
    <string name="please_verify">Account created, please, check email and verify before sign in</string>
    <string name="wait">Please wait . . .</string>
    <string name="fic_used">This FIC is already registered</string>
    <string name="fic_not_valid">FIC not valid</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">I have forgot my password</string>
    <string name="send_recovery">Send recovery to</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sent_recovery">Recovery password sent</string>
    <string name="create_account">Create account</string>
    <string name="account_created_on">Account created on</string>
    <string name="delete_account">Delete account</string>
    <string name="password_and_checkbox">Enter your password and accept the check box</string>
    <string name="account_deleted">Account deleted, we will miss you</string>
    <string name="confirm_delete_account">By deleting your account you are aware that it is an irreversible act. Enter your password to continue:</string>
    <string name="consequences">I accept the consequences</string>
    <string name="logout">Logout</string>
    <string name="account_not_found">Account not found</string>
    <string name="are_you_a_company">Are you a company? Register </string>
    <string name="here">here</string>
    <string name="bad_credentials">Bad credentials</string>
    <string name="permission_not_granted">Please give permission to change your profile photo</string>
    <string name="name">Name</string>
    <string name="updated_name">Updated name</string>
    <string name="updated_photo">Updated photo</string>
    <string name="updated_data">Updated data</string>
    <string name="company_name">Company name</string>
    <string name="fiscal_identification_code">FIC</string>
    <string name="password">Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="required">Required</string>
    <string name="welcome_toast">Welcome</string>
    <string name="sign_in_separator">or</string>
    <string name="error">We are sorry, there was an error</string>
    <string name="my_ratings">My ratings</string>
    <string name="phone_number">Phone number</string>
    <string name="earnings">Earnings</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="your_hotels">Your hotels</string>
    <string name="hotel_name">Hotel name</string>
    <string name="location">Location</string>
    <string name="hotel_description">Description (optional)</string>
    <string name="add_photos">Add photos</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="data_saved_successfully">Data saved successfully</string>
    <string name="provide_hotel_name">Provide hotel name</string>
    <string name="provide_location">Provide location</string>
    <string name="provide_room_name">Provide room name</string>
    <string name="provide_max_people">Provide max people</string>
    <string name="provide_room_number">Provide room number</string>
    <string name="provide_price_per_night">Provide price per night</string>
    <string name="select_stars">Select how many stars the hotel has</string>
    <string name="room_name">Room name</string>
    <string name="max_people">Max people</string>
    <string name="price_per_night">Price per night</string>
    <string name="hot_tub">Hot tub</string>
    <string name="air_conditioning">Air conditioning</string>
    <string name="minibar">Minibar</string>
    <string name="balcony_terrace">Balcony/Terrace</string>
    <string name="heating">Heating</string>
    <string name="tv">TV</string>
    <string name="breakfast">Breakfast included</string>
    <string name="wifi">Wi-Fi</string>
    <string name="microwave">Microwave</string>
    <string name="ceiling_fan">Ceiling fan</string>
    <string name="room_number">Room number</string>
    <string name="swimming_pool">Swimming pool</string>
    <string name="restaurant">Restaurant</string>
    <string name="spa">Spa</string>
    <string name="adults_only">Adults-only</string>
    <string name="gym">Gym</string>
    <string name="water_park">Water park</string>
    <string name="bowling">Bowling</string>
    <string name="padel_courts">Padel courts</string>
    <string name="seafront">Seafront</string>
    <string name="rural">Rural</string>
    <string name="book">Book</string>
    <string name="booking">Booking</string>
    <string name="please_fill_in_the_details">Please, fill in the details</string>
    <string name="booking_successful">Booking successful</string>
    <string name="fill_in_the_details">Fill in the details:</string>
    <string name="booking_text">By confirming you agree to pay the amount and you have the right to cancel your booking at any time at no additional cost.</string>
    <string name="search_hotel">Search hotel</string>
    <string name="id_card">ID card</string>
    <string name="id_not_valid">ID not valid</string>
    <string name="my_bookings">My bookings</string>
    <string name="bookings_history">Bookings history</string>
    <string name="my_reviews">My reviews</string>
    <string name="review_text">Describe your experience (optional)</string>
    <string name="delete">Delete</string>
    <string name="upcoming_customers">Upcoming customers</string>
    <string name="why_cancel">Why do you cancel?</string>
    <string name="write_reason">Write the reason here</string>
    <string name="reason_required">Reason required</string>
    <string name="search_booking">Customer ID/name or booking ID</string>
    <string name="reviews">Reviews</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="review_saved">Review saved successfully</string>
</resources>