<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddHotelActivity">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:visibility="gone"
        app:chipSpacingHorizontal="5dp"
        app:chipSpacingVertical="-5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_images">

        <com.google.android.material.chip.Chip
            android:id="@+id/swimming_pool"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swimming_pool"
            android:textColor="?attr/colorOnSurface"
            android:tag="swimming_pool"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/restaurant"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant"
            android:textColor="?attr/colorOnSurface"
            android:tag="restaurant"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/spa"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spa"
            android:textColor="?attr/colorOnSurface"
            android:tag="spa"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/adults_only"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adults_only"
            android:textColor="?attr/colorOnSurface"
            android:tag="adults_only"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/gym"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gym"
            android:textColor="?attr/colorOnSurface"
            android:tag="gym"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/water_park"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_park"
            android:textColor="?attr/colorOnSurface"
            android:tag="water_park"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bowling"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bowling"
            android:textColor="?attr/colorOnSurface"
            android:tag="bowling"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/padel_courts"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/padel_courts"
            android:textColor="?attr/colorOnSurface"
            android:tag="padel_courts"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/seafront"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seafront"
            android:textColor="?attr/colorOnSurface"
            android:tag="seafront"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

        <com.google.android.material.chip.Chip
            android:id="@+id/rural"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rural"
            android:textColor="?attr/colorOnSurface"
            android:tag="rural"
            app:chipBackgroundColor="@drawable/chip_background_selector" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/add_photos_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#10000000"
        android:drawableLeft="@drawable/baseline_add_photo_alternate_24"
        android:drawableTint="?attr/colorOnSurface"
        android:text="@string/add_photos"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <AutoCompleteTextView
        android:id="@+id/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/baseline_edit_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/hotel_name"
        android:inputType="textAutoComplete"
        android:maxLength="100"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/baseline_edit_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/hotel_description"
        android:inputType="textMultiLine|textAutoComplete"
        android:maxLength="200"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:maxLines="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondary_text" />

    <AutoCompleteTextView
        android:id="@+id/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/baseline_place_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textAutoComplete"
        android:maxLength="100"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primary_text" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_star_border_24" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toEndOf="@+id/star1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_star_border_24" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toEndOf="@+id/star2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_star_border_24" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toEndOf="@+id/star3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_star_border_24" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toEndOf="@+id/star4"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_star_border_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_images"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_photos_button" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#10000000"
        android:text="@string/next"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#10000000"
        android:text="@string/finish"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:indeterminateTint="#0091F1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />

</androidx.constraintlayout.widget.ConstraintLayout>